bg height and spacing fixed

--- a/Client/src/Layouts/HomeLayout/index.css
+++ b/Client/src/Layouts/HomeLayout/index.css
@@ -10,7 +10,7 @@
   grid-template-columns: var(--env-var-side-bar-width) auto;
   grid-template-rows: var(--env-var-nav-bar-height) auto;
   background-color: var(--env-var-color-30);
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .home-layout aside {
